--- a/Backend/.env
+++ b/Backend/.env
@@ -1,12 +1,6 @@
-db_link = 'mongodb+srv://pushpendujana007:Dc1n3MmsJ53Vmzt0@cluster0.bsxn6la.mongodb.net/DanaTest?retryWrites=true&w=majority'
+db_link = 'Mongo_Link'
 
 port = 4000
-
-
-
-# cors origin Live
-# origin = 'https://dana.org.in'
-# admin = 'https://admin.dana.org.in'
 
 # cors origin Local system
 origin = 'http://localhost:5173'
@@ -15,5 +9,5 @@ admin = 'http://localhost:5174'
 
 
 # jwt Secret
-jwt_secret = DANA-ORG@2024
+jwt_secret = DHello
 # jwt_secret = D
